--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </ul>
             <h4>Media:</h4>
             <ul>
-                <li>Reading: Go Tell It on the Mountain by James Baldwin + When All Else Fails by James Brennan + <a href="https://substack.com/home/post/p-187013036" target="_blank">This Article</a></li>
+                <li>Reading: Go Tell It on the Mountain by James Baldwin + When All Else Fails by Jason Brennan + <a href="https://substack.com/home/post/p-187013036" target="_blank">This Article</a></li>
                 <li>Watching: The Sopranos + <a href="https://letterboxd.com/adamsiro/" target="_blank">My Letterboxd</a></li>
                 <li>
                     Listening:
